# zero-compiler

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  mpp_status.md
docs/: BUILD_SUCCESS.md  DISPLAY_MODULE.md  LLVM_INSTALLATION.md  PRINT_IMPLEMENTATION.md  TEST_SUCCESS.md  ZERO_PROTOTYPE_PLAN.md  project_structure.md
examples/: README.md  calculator.zero  error_demo.zero  hello.zero  hello_world.zero  logging_demo.zero
include/ast/: ast.hpp
include/backend/: interpreter.hpp
include/diagnostics/: reporter.hpp
include/ir/: builder.hpp  ir.hpp  lowering.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: parser.hpp
include/sema/: sema.hpp
include/source/: source.hpp
include/types/: types.hpp
runtime/: CMakeLists.txt  runtime.cpp  runtime.h
src/backend/: CMakeLists.txt  interpreter.cpp
src/diagnostics/: CMakeLists.txt  reporter.cpp
src/driver/: CMakeLists.txt  main.cpp
src/ir/: CMakeLists.txt  ir.cpp  lowering.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/sema/: CMakeLists.txt  sema.cpp
src/source/: CMakeLists.txt  source.cpp
stdlib/: display.zero
tests/: CMakeLists.txt  test_backend.cpp  test_errors.cpp  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_print_enhanced.cpp  test_runtime.cpp  test_sema.cpp  test_source.cpp  test_types.cpp
